--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
     "    names = name.split(' ')\n",
     "    first_name = names[0]\n",
     "    last_name = names[1]\n",
-    "    return first_name[0] + last_name[0]"
+    "    return first_name[0] + last_name[0]\n"
    ]
   },
   {
@@ -280,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10eda6860>"
+       "<map at 0x7fb9e4294160>"
       ]
      },
      "execution_count": 9,
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
